--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "compile": "yarn workspace @se-2/hardhat compile",
     "deploy": "yarn workspace @se-2/hardhat deploy",
     "flatten": "yarn workspace @se-2/hardhat flatten",
+    "graphclient:build": "graphclient build",
     "fork": "yarn workspace @se-2/hardhat fork",
     "format": "yarn next:format && yarn hardhat:format",
     "generate": "yarn workspace @se-2/hardhat generate",
@@ -34,6 +35,7 @@
     "verify": "yarn workspace @se-2/hardhat verify"
   },
   "devDependencies": {
+    "@graphprotocol/client-cli": "^3.0.7",
     "husky": "~8.0.3",
     "lint-staged": "~13.2.2"
   },
@@ -47,6 +49,8 @@
     "@nomicfoundation/hardhat-verify": "^2.0.12",
     "@openzeppelin/contracts": "4.7.0",
     "dotenv": "^16.4.7",
-    "hardhat": "^2.22.17"
+    "graphql": "^16.9.0",
+    "hardhat": "^2.22.17",
+    "recharts": "^2.14.1"
   }
 }
