--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "@chainlink/contracts": "^1.3.0",
+    "@coinbase/onchainkit": "^0.35.8",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.12",
     "@openzeppelin/contracts": "4.7.0",
