--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,7 +49,9 @@
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.12",
     "@openzeppelin/contracts": "4.7.0",
+    "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "form-data": "^4.0.1",
     "graphql": "^16.9.0",
     "hardhat": "^2.22.17",
     "recharts": "^2.14.1"
