--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
     "form-data": "^4.0.1",
     "graphql": "^16.9.0",
     "hardhat": "^2.22.17",
+    "lucide-react": "^0.468.0",
     "recharts": "^2.14.1"
   }
 }
