--- a/zk-osSubstream/.gitignore
+++ b/zk-osSubstream/.gitignore
@@ -1,4 +1,5 @@
-
+# substreams auth file
+.substreams.env
 
 # Compiled source files
 target/
@@ -8,6 +9,3 @@ sink-data/
 
 # The spkg packed by the subtreams cli
 *.spkg
-node_modules/
-# Added by substreams init# substreams auth file
-.substreams.env
