--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "node": ">=18.18.0"
   },
   "dependencies": {
+    "@apollo/client": "^3.12.2",
     "@chainlink/contracts": "^1.3.0",
     "@coinbase/onchainkit": "^0.35.8",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
